// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`node-version default 1`] = `
Array [
  .node-version,
  .nvmrc,
  package.json,
]
`;

exports[`node-version with-githooks 1`] = `
Array [
  .huskyrc,
  .node-version,
  .nvmrc,
  package.json,
]
`;
